tests/script_errors/lexer_unterminated_heredoc2/error.txt
Error: 
    1 | """
    2 | this is a heredoc
      | ^^^^^^^^^^^^^^^^^ It looks like you forgot to terminate a here doc with with a closing '"""'